# cTensor

./: .gitignore  API.md  CMakeLists.txt  README.md  build.bat  build.sh
.github/: check_all_results.py  check_operator_coverage.py
.github/workflows/: pr-check.yml  run-ctests.yml  run-tests.yml  test-coverage.yml  test.yml
include/: cten.h
include/common/: vector.h
src/: basic.c  nn.c  operator.c  utils.c
src/common/: vector.c
src/optimizer/: adagrad.c  adam.c  rmsprop.c  sgd.c
src2/: main.c  main2.c
tests/: README.md  csv_reporter.c  csv_reporter.h  cten_tests.c  nn_softmax.c  operator_mul.c  test_config.h  test_pytorch_ref.c  test_utils.c  test_utils.h
tests/Backward/: test_abs_backward.c  test_add_backward.c  test_div_backward.c  test_linear_backward.c  test_matmul_backward.c  test_max_backward.c  test_mean_backward.c  test_min_backward.c  test_mul_backward.c  test_pow_backward.c  test_relu_backward.c  test_softmax_backward.c  test_sub_backward.c  test_sum_backward.c
tests/Operator/: test_abs.c  test_add.c  test_div.c  test_matmul.c  test_max.c  test_mean.c  test_min.c  test_mul.c  test_mulf.c  test_pow.c  test_reciprocal.c  test_softmax.c  test_square.c  test_sub.c  test_sum.c
